# Villagers-Embedding-Tool

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
src/: cmdline.rs  embedder.rs  image.rs  main.rs  render.rs  subtitle.rs
