[package]
name = "villagers-embedding-tool"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
ffmpeg-next = {version = "4.4.0"}
flexi_logger = "0.22.3"
# flexi_logger = "0.22.3"
lazy_static = "1.4.0"
log = "0.4.16"
num_cpus = "1.13.1"
# log = "0.4.16"
rayon = "1.5.1"
regex = "1.5.5"

[target.'cfg(target_family = "windows")'.dependencies]
ffmpeg-sys-next = {version = "4.4.0", features = ["static"]}
# [target.'cfg(target_family = "windows")'.dependencies]
# ffmpeg-sys-next = {version = "5.0.1", features = ["static"]}

[target.'cfg(not(target_family = "windows"))'.dependencies]
ffmpeg-sys-next = {version = "4.4.0", features = ["build"]}


[profile.release]
opt-level = 3
lto = true
debug = 0
overflow-checks = false
